Fix the pricing layout if a label is too long

--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -75,6 +75,7 @@
 
 .product-card__price-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
 }
 
